# quant-helper

./: README.md  pyproject.toml
examples/: simple_strategy.py
src/quant_helper/: __init__.py  backtest.py  costs.py  factors.py  market_data.py  optimize.py  performance.py  stress.py
